# RustCloud

./: .editorconfig  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
rustcloud/: Cargo.toml  clippy_errors.txt  compile_errors5.txt  compile_errors6.txt  compile_errors7.txt  rustfmt.toml
rustcloud/src/: errors.rs  lib.rs  main.rs
rustcloud/src/aws/: mod.rs
rustcloud/src/aws/aws_apis/: mod.rs
rustcloud/src/aws/aws_apis/ai/: bedrock.rs  mod.rs
rustcloud/src/aws/aws_apis/app_services/: aws_sns.rs  aws_sqs.rs
rustcloud/src/aws/aws_apis/artificial_intelligence/: aws_bedrock.rs  bedrock.rs  mod.rs
rustcloud/src/azure/: mod.rs
rustcloud/src/azure/azure_apis/: mod.rs
rustcloud/src/config/: mod.rs
rustcloud/src/digiocean/: mod.rs
rustcloud/src/digiocean/digiocean_apis/: mod.rs
rustcloud/src/gcp/: errors.rs  middleware.rs  mod.rs
rustcloud/src/gcp/gcp_apis/: mod.rs
rustcloud/src/gcp/gcp_apis/auth/: mod.rs  (+1 more)
rustcloud/src/gcp/types/: mod.rs
rustcloud/src/genai/: client.rs  mod.rs  retry.rs  routing.rs
rustcloud/src/openai/openai_apis/: openai_compatible.rs
rustcloud/src/providers/: fallback.rs  mod.rs
rustcloud/src/tests/: archival_operations.rs  aws_archival_operations.rs  aws_bedrock_operations.rs  aws_block_operations.rs  aws_bucket_operations.rs  aws_dns_operations.rs  aws_dynamodb_operations.rs  aws_ec2_operations.rs  aws_ecs_operations.rs  aws_eks_operations.rs  aws_iam_operations.rs  aws_kms_operations.rs  aws_lambda_operations.rs  aws_loadbalancer_operations.rs  aws_monitoring_operations.rs  aws_secrets_manager_operations.rs  aws_sns_operations.rs  aws_sqs_operations.rs  azure_application_gateway_operations.rs  azure_blob_operations.rs  azure_container_instance_operations.rs  azure_cosmos_db_operations.rs  azure_dns_operations.rs  azure_file_storage_operations.rs  azure_function_operations.rs  azure_key_vault_operations.rs  azure_kubernetes_service_operations.rs  azure_load_balancer_operations.rs  azure_nat_gateway_operations.rs  azure_nic_operations.rs  azure_openai_operations.rs  azure_public_ip_operations.rs  azure_queue_storage_operations.rs  azure_resource_group_operations.rs  azure_service_bus_operations.rs  azure_storage_account_operations.rs  azure_subnet_operations.rs  azure_vm_operations.rs  azure_vm_scale_set_operations.rs  azure_vnet_operations.rs  (+32 more)
rustcloud/src/traits/: llm_provider.rs  mod.rs  providers.rs  token_provider.rs
rustcloud/src/types/: llm.rs
rustcloud/src/utils/: rate_limiter.rs  retry.rs
rustcloud/src/utils/health/: mod.rs
(+145 files in other folders)
