[package]
name = "rustcloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
aws-config = "1.4.0"
aws-sdk-cloudwatch = "1.33.0"
aws-sdk-config = "1.34.0"
aws-sdk-docdb = "1.30.0"
aws-sdk-dynamodb = "1.27.0"
aws-sdk-ec2 = "1.44.0"
aws-sdk-ec2instanceconnect = "1.24.0"
aws-sdk-ecs = "1.28.0"
aws-sdk-eks = "1.30.0"
aws-sdk-elasticloadbalancing = "1.29.0"
aws-sdk-glacier = "1.29.0"
aws-sdk-iam = "1.30.0"
aws-sdk-kms = "1.30.0"
aws-sdk-rds = "1.38.1"
aws-sdk-route53 = "1.30.0"
aws-sdk-s3 = "1.34.0"
chrono = "0.4.38"
gcloud-sdk = "0.24.7"
mockall = "=0.9.1"
reqwest = "0.12.5"
serde = "1.0.203"
serde_json = "1.0.118"

tokio = { version = "1.37.0", features = ["full", "test-util"] }


[dev-dependencies]
rustcloud = { path = '.' }

[[language]]
name = "rust"
file-types = ["rs"]
comment-tokens = ["//", "///", "//!"]
indent = { tab-width = 2, unit = " " }
language-servers = [ "rust-analyzer"]
